Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36527

Selecting mysql.wsrep_streaming_log incorrectly not allowed when detached

    XMLWordPrintable

Details

    • Q3/2025 Maintenance

    Description

      Tests affected:

      galera.MDEV-35946                        w6 [ fail ]
      03:53:00         Test ended at 2025-04-04 00:52:40
      03:53:00 
      03:53:00 CURRENT_TEST: galera.MDEV-35946
      03:53:00 mysqltest: At line 26: query 'DELETE FROM mysql.wsrep_streaming_log' failed with wrong errno ER_UNKNOWN_COM_ERROR (1047): 'WSREP has not yet prepared node for application use', instead of ER_LOCK_WAIT_TIMEOUT (1205)...
      

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            janlindstrom Jan Lindström
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d
                1d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.