MDEV-36527 : Selecting mysql.wsrep_streaming_log incorrectly not allowed when detached

Problem was that in get_table_category function comparison
is table wsrep system table was placed incorrectly causing
TABLE_CATEGORY_MYSQL being returned and user access to tables
with that category are not allowed when detached.

Fixed by moving check is table wsrep system table
inside a mysql schema table checks,
it's category is TABLE_CATEGORY_INFORMATION and tables
with this category can be accessed when detached.